samples/_failures_safe/1761005443_7a9a07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5511d9a4.c: In function ‘main’:
./samples/SAFE/__tmp_5511d9a4.c:170:5: error: expected expression at end of input
  170 |     buffer_init(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_5511d9a4.c:170:5: error: too few arguments to function ‘buffer_init’
./samples/SAFE/__tmp_5511d9a4.c:17:6: note: declared here
   17 | void buffer_init(Buffer *buf, size_t initial_capacity) {
      |      ^~~~~~~~~~~
./samples/SAFE/__tmp_5511d9a4.c:170:5: error: expected declaration or statement at end of input
  170 |     buffer_init(&
      |     ^~~~~~~~~~~
